# wrf-stilt-model

./: .dockerignore  .flake8  .gitattributes  .gitignore  Dockerfile  README.md
server/: config.py  pyproject.toml
server/apps/model_wrf_stilt/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
server/apps/model_wrf_stilt/migrations/: 0001_squashed_0013_alter_modelwrfstilt_obsgrid_enabled.py  0014_modelwrfstilt_obsgrid_upper_air_url_and_more.py  0015_alter_modelwrfstilt_data_source.py  0016_modelwrfstilt_aermod_anchorxy_and_more.py  0017_remove_pollutantsource_categoty_and_more.py  0018_emissioncontributiondata.py  0019_alter_modelwrfstilt_obsgrid_upper_air_url.py  0020_alter_emissioncontributiondata_pid_and_more.py  0021_rename_pid_emissioncontributiondata_pollutant_source_and_more.py  0022_remove_emissioncontributiondata_pm10_and_more.py  0023_emissioncontributiondata_emis_rate_s_and_more.py  0024_modelwrfstilt_aermap_datafile_and_more.py  0025_alter_modelwrfstilt_aermap_datafile.py  0026_remove_pollutantsource_pm10_emis_and_more.py  0027_remove_emissioncontributiondata_pollutant_source_and_more.py
server/frontend/stilt_page/: index.html
server/locale/en/LC_MESSAGES/: django.po
server/server/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
server/tasks/common_utils/: common.py  decorator.py  exceptions.py  model_types.py  process_stilt_data.py  shell.py
server/tasks/wrf_stilt_aermod_task/: crud.py  main.py  run_obsgrid.py  run_process_model_config.py  run_stilt.py  run_wps.py  run_wrf.py
server/utils/: model.py  utils_netcdf.py
(+25 files in other folders)
